feat: create producer